# lab4rev2

./: .gitignore  README.md  lefthook.yml  pyproject.toml  requirements.txt
.github/workflows/: docs.yml
completions/: _fvh-manager  fvh-manager.bash  fvh-manager.fish  fvh-manager.ps1
conf/: otelcol-config.yaml
docs/: Plan.md  index.md  plan.md  reference.md  references.md  sources.json  user-guide.md
docs/.source/: conf.py  index.rst  references.rst  user-guide.rst
docs/.source/design/: index.rst  project-overview.rst  pseudocode.rst  style-guide.rst  used-references.rst
docs/design/: index.md  project-overview.md  project-plan.md  pseudocode.md  style-guide.md  used-references.md
docs/source/: conf.py  index.rst  usage.rst  user-guide.rst
docs/source/_static/: open_external_links.js
docs/source/design/: project-plan.rst  used-references.rst
scripts/: build_docs.sh  generate_completions.sh  make_sources_rst.py  run-lgtm.sh
src/: __init__.py  main.py  observability.py
src/lab4/: main.py
