[project]
name = "lab4"
version = "0.2.0"
description = "This is a CRUD compliant event booking cli for Fountain View Hall"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "prometheus-client>=0.25.0",
    "sqlalchemy>=2.0.50",
    "typer>=0.26.7",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=. --cov-report=term-missing --cov-report=html"
log_cli = false
log_level = "WARNING"
filterwarnings = [
    "ignore::ResourceWarning",
]

[tool.uv]
package = true

[tool.isort]
profile = "black"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "myst-parser>=5.1.0",
    "sphinx>=9.1.0",
    "furo>=2025.12.19",
    "lefthook>=2.1.9",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "sphinx-autodoc-typehints>=3.10.5",
    "sphinx-markdown-builder>=0.6.10",
]

[project.scripts]
fvh-manager = "src.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[[tool.pydoc-markdown.loaders]]
type = "python"
search_path = [ "src" ]
